# wasm-janken

./: Cargo.toml  Dioxus.toml
docs/: index.html
docs/assets/dioxus/: rust-janken.js  rust-janken_bg.wasm
docs/assets/dioxus/snippets/dioxus-interpreter-js-603636eeca72cf05/: inline0.js
src/: main.rs
