[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4.0"
dioxus-web = "0.4.0"
log = "0.4.20"
rand = "0.8.5"
wasm-bindgen = "0.2.87"
web-sys = { version = "^0.3.64", features = ["console"]}
getrandom = { version = "0.2", features = ["js"] }
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.183", feature = ["derive"] }
